--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="about col-8">
           <div class="intro d-flex flex-row">
             <div class="intro-text">
-              <h1 class="hello"> Hi, I'm ZONG Yizhu</h1>
+              <h1 class="hello"> Hi, I'm ZONG Yizhu :)</h1>
               <h3 class="introduction"> A <strong>Product Manager</strong>, with Web Development coding skills</h3>
             </div>
            <!--  <img id="profile-photo" src="/src/media/photo_yizhu_pro.jpg" alt="Profile photo"> -->
