--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Yizhu ZONG - Product Manager with web development coding skills</title>
+    <title>Yizhu ZONG : Full-stack developer reconvert from buyer </title>
     <meta name="description" content="On-line CV of Yizhu ZONG.">
     <meta charset="utf-8">
     <meta name="description" content="Passionate Product Manager & Professional buyer">
@@ -36,6 +36,14 @@
             <span class="char1" aria-hidden="true">S</span>
            </a>
            <a href="" class="d-flex justify-content-between">
+            <span class="char1" aria-hidden="true">R</span>
+            <span class="char1" aria-hidden="true">E</span>
+            <span class="char1" aria-hidden="true">S</span>
+            <span class="char1" aria-hidden="true">U</span>
+            <span class="char1" aria-hidden="true">M</span>
+            <span class="char1" aria-hidden="true">E</span>
+           </a>
+           <a href="" class="d-flex justify-content-between">
             <span class="char1" aria-hidden="true">P</span>
             <span class="char1" aria-hidden="true">R</span>
             <span class="char1" aria-hidden="true">O</span>
@@ -43,19 +51,6 @@
             <span class="char1" aria-hidden="true">E</span>
             <span class="char1" aria-hidden="true">C</span>
             <span class="char1" aria-hidden="true">T</span>
-            <span class="char1" aria-hidden="true">S</span>
-           </a>
-           <a href="" class="d-flex justify-content-between">
-            <span class="char1" aria-hidden="true">E</span>
-            <span class="char1" aria-hidden="true">X</span>
-            <span class="char1" aria-hidden="true">P</span>
-            <span class="char1" aria-hidden="true">E</span>
-            <span class="char1" aria-hidden="true">R</span>
-            <span class="char1" aria-hidden="true">I</span>
-            <span class="char1" aria-hidden="true">E</span>
-            <span class="char1" aria-hidden="true">N</span>
-            <span class="char1" aria-hidden="true">C</span>
-            <span class="char1" aria-hidden="true">E</span>
             <span class="char1" aria-hidden="true">S</span>
            </a>
           </div>
@@ -71,49 +66,76 @@
         </div>
         <!-- end navbar -->
 
-        <!-- about -->
-        <div class="about col-8">
+        <!-- title + about -->
+        <div class="title col-8">
           <div class="intro d-flex flex-row">
             <div class="intro-text">
-              <h1 class="hello"> Hi, I'm ZONG Yizhu :)</h1>
-              <h3 class="introduction"> A <strong>Product Manager</strong>, with Web Development coding skills</h3>
+              <h1 class="py-5"> Hi, I'm Yizhu ZONG :)</h1>
+              <h3 class="introduction">Old time buyer, now comes back as a <strong> Full-stack developer </strong>with Ruby on rails! <i class="fas fa-gem"></i></h3>
             </div>
            <!--  <img id="profile-photo" src="/src/media/photo_yizhu_pro.jpg" alt="Profile photo"> -->
           </div>
 
-           <div class="personality">
-             <p>Personality Type: <strong>ENTP</strong></p>
-             <p> Curious, passionate, pragmatic, autonomous, empathy, fast learner, self-motivated, performance-driven</p>
-           </div>
+          <div class="about">
+            <h2 class="pt-5">About</h2>
+            <div class="space-line"></div>
+            <p class="pt-3"> I am a curious person, passionate with empathy, pragmatic, autonomous, a fast learner with full energy, self-motivation, performance-driven type!</p>
+            <h5 class="pt-3">Personality: <strong>ENTP</strong></h5>
 
-          <img class ="chart-personality" src="/src/media/professional Behaviors.png" alt="Professional Behaviors from TelantToday">
+            <h5 class="pt-3">Professional Behaviors</h5>
+            <div class="behavior pt-3">
+              <div class="progress-item">
+                <span class="col-6">Enterprising, triggers innovations</span>
+                <div class="progress mt-3">
+                  <div class="progress-bar" role="progressbar" style="width: 81%" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="progress-item">
+                <span class="col-6">Mentor, build confidence in a team</span>
+                <div class="progress mt-3">
+                  <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="progress-item">
+                <span class="col-6">Intuitive, understands the big picture</span>
+                <div class="progress mt-3">
+                  <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="progress-item">
+                <span class="col-6">Direct, communicate with ease</span>
+                <div class="progress mt-3">
+                  <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
 
 
-          <div class="language">
-            <h4>Language</h4>
-            <ul>
-              <li>Chinese</li>
-              <li>English</li>
-              <li>French</li>
-            </ul>
-          </div>
-
-
-          <div class="education">
-            <h4>Education</h4>
-            <p class=year>2008-2009</p>
-            <p class="school">IGR-IAE de Rennes, France</p>
-            <p class="degree">Master’s Degree of International Business Management & Development
-            </p>
+            <div class="language mt-5">
+              <h4>Language</h4>
+              <ul>
+                <li>Chinese</li>
+                <li>English</li>
+                <li>French</li>
+              </ul>
+            </div>
+            <div class="education">
+              <h4>Education</h4>
+              <p class=year>2008-2009</p>
+              <p class="school">IGR-IAE de Rennes, France</p>
+              <p class="degree">Master’s Degree of International Business Management & Development
+              </p>
+            </div>
           </div>
 
         </div>
-        <!-- end about -->
+        <!-- end title + about -->
 
         <!-- skills -->
         <!-- end skills -->
 
-        <!-- experience -->
+        <!-- resume -->
+          <div class="resume">
+
+          </div>
         <!-- end experience -->
 
       </div>
