--- a/index.html
+++ b/index.html
@@ -10,70 +10,90 @@
     <link rel="shortcut icon" href="#"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;0,600;1,300;1,500;1,600&family=Maven+Pro:wght@400;600&family=Poppins:ital,wght@0,100;0,200;0,500;0,600;0,700;0,900;1,600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- Add some HTML in here -->
-    <div class="container-fluid">
-      <div class="row">
-        <!-- navbar -->
-        <div class="nav-menu col-4">
-          <div class="menu-list d-flex flex-column justify-content-between">
-           <a href="" class="active d-flex justify-content-between">
-            <span class="char1" aria-hidden="true">A</span>
-            <span class="char1" aria-hidden="true">B</span>
-            <span class="char1" aria-hidden="true">O</span>
-            <span class="char1" aria-hidden="true">U</span>
-            <span class="char1" aria-hidden="true">T</span>
-           </a>
-           <a href="" class="d-flex justify-content-between">
-            <span class="char1" aria-hidden="true">S</span>
-            <span class="char1" aria-hidden="true">K</span>
-            <span class="char1" aria-hidden="true">I</span>
-            <span class="char1" aria-hidden="true">L</span>
-            <span class="char1" aria-hidden="true">L</span>
-            <span class="char1" aria-hidden="true">S</span>
-           </a>
-           <a href="" class="d-flex justify-content-between">
-            <span class="char1" aria-hidden="true">R</span>
-            <span class="char1" aria-hidden="true">E</span>
-            <span class="char1" aria-hidden="true">S</span>
-            <span class="char1" aria-hidden="true">U</span>
-            <span class="char1" aria-hidden="true">M</span>
-            <span class="char1" aria-hidden="true">E</span>
-           </a>
-           <a href="" class="d-flex justify-content-between">
-            <span class="char1" aria-hidden="true">P</span>
-            <span class="char1" aria-hidden="true">R</span>
-            <span class="char1" aria-hidden="true">O</span>
-            <span class="char1" aria-hidden="true">J</span>
-            <span class="char1" aria-hidden="true">E</span>
-            <span class="char1" aria-hidden="true">C</span>
-            <span class="char1" aria-hidden="true">T</span>
-            <span class="char1" aria-hidden="true">S</span>
-           </a>
-          </div>
+    <!-- navbar wagon style with dropdown -->
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-terminal"></i> YIZHU ZONG
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-          <div class="nav-follow">
-            <a href=""><i class="fab fa-linkedin"></i></a>
-            <a href=""><i class="fab fa-github"></i></a>
-            <a href=""><i class="fab fa-instagram"></i></a>
-          </div>
 
-          <div class="nav-bg">
-          </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="nav-follow">
+          <a href=""><i class="fab fa-linkedin"></i></a>
+          <a href=""><i class="fab fa-github"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
         </div>
-        <!-- end navbar -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <div class="toggle-holder">
+              <div id="toggle" class="">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
+            </div>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a href="" class="active d-flex justify-content-between">
+                <span class="char1" aria-hidden="true">A</span>
+                <span class="char1" aria-hidden="true">B</span>
+                <span class="char1" aria-hidden="true">O</span>
+                <span class="char1" aria-hidden="true">U</span>
+                <span class="char1" aria-hidden="true">T</span>
+              </a>
+              <a href="" class="d-flex justify-content-between">
+                <span class="char1" aria-hidden="true">S</span>
+                <span class="char1" aria-hidden="true">K</span>
+                <span class="char1" aria-hidden="true">I</span>
+                <span class="char1" aria-hidden="true">L</span>
+                <span class="char1" aria-hidden="true">L</span>
+                <span class="char1" aria-hidden="true">S</span>
+              </a>
+              <a href="" class="d-flex justify-content-between">
+                <span class="char1" aria-hidden="true">R</span>
+                <span class="char1" aria-hidden="true">E</span>
+                <span class="char1" aria-hidden="true">S</span>
+                <span class="char1" aria-hidden="true">U</span>
+                <span class="char1" aria-hidden="true">M</span>
+                <span class="char1" aria-hidden="true">E</span>
+              </a>
+              <a href="" class="d-flex justify-content-between">
+                <span class="char1" aria-hidden="true">P</span>
+                <span class="char1" aria-hidden="true">R</span>
+                <span class="char1" aria-hidden="true">O</span>
+                <span class="char1" aria-hidden="true">J</span>
+                <span class="char1" aria-hidden="true">E</span>
+                <span class="char1" aria-hidden="true">C</span>
+                <span class="char1" aria-hidden="true">T</span>
+                <span class="char1" aria-hidden="true">S</span>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- navbar end here -->
+
+    <div class="container">
+      <div class="row">
+        <!-- profile photo -->
+        <div class="nav-bg col 4" style="background-image: linear-gradient(rgba(246, 219, 188, 0.3),rgba(246, 219, 188, 0.3)), url('/src/media/Yizhu_Zong_2.jpg')">
+        </div>
+        <!-- end profile photo -->
 
         <!-- title + about -->
         <div class="title col-8">
           <div class="intro d-flex flex-row">
+            <!-- <img id="profile-photo" src="/src/media/Yizhu Zong_2.jpg" alt="Profile photo"> -->
             <div class="intro-text">
-              <h1 class="py-5"> Hi, I'm Yizhu ZONG :)</h1>
-              <h3 class="introduction">Old time buyer, now comes back as a <strong> Full-stack developer </strong>with Ruby on rails! <i class="fas fa-gem"></i></h3>
+              <h1 class="py-5"> Hello, I'm<br> Yizhu Zong </h1>
+              <p class="introduction">Old time buyer, now comes back as a <strong> Full-stack web developer </strong> equiped with <i class="fas fa-gem"></i> Ruby on rails, <i class="fab fa-js"></i> javascript, <i class="far fa-file-code"></i> HTML, <i class="fab fa-css3"></i> CSS, <i class="fab fa-bootstrap"></i> Bootstrap, and so on...</p>
             </div>
-           <!--  <img id="profile-photo" src="/src/media/photo_yizhu_pro.jpg" alt="Profile photo"> -->
           </div>
 
           <div class="about">
@@ -85,28 +105,29 @@
             <h5 class="pt-3">Professional Behaviors</h5>
             <div class="behavior pt-3">
               <div class="progress-item">
+                <div class="progress mt-3">
+                  <div class="progress-bar" role="progressbar" style="width: 81%" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100">81%</div>
+                </div>
                 <span class="col-6">Enterprising, triggers innovations</span>
-                <div class="progress mt-3">
-                  <div class="progress-bar" role="progressbar" style="width: 81%" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
               </div>
               <div class="progress-item">
+                <div class="progress mt-3">
+                  <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">69%</div>
+                </div>
                 <span class="col-6">Mentor, build confidence in a team</span>
-                <div class="progress mt-3">
-                  <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
               </div>
               <div class="progress-item">
+                <div class="progress mt-3">
+                  <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100">78%</div>
+                </div>
                 <span class="col-6">Intuitive, understands the big picture</span>
-                <div class="progress mt-3">
-                  <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
               </div>
               <div class="progress-item">
-                <span class="col-6">Direct, communicate with ease</span>
                 <div class="progress mt-3">
-                  <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100">74%</div>
                 </div>
+                <span class="col-6">Direct, communicate with ease</span>
+              </div>
 
 
             <div class="language mt-5">
@@ -124,7 +145,6 @@
               <p class="degree">Master’s Degree of International Business Management & Development
               </p>
             </div>
-          </div>
 
         </div>
         <!-- end title + about -->
