new version vintage color

--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
               <p class="school">IGR-IAE de Rennes, France</p>
               <p class="degree">Master’s Degree of International Business Management & Development
               </p>
+
+              <p class=year>1999-2003</p>
+              <p class="school">Harbin University of Science & Technology, China</p>
+              <p class="degree">Bechelor’s Degree of International Trading & Economy
+              </p>
             </div>
 
         </div>
