--- a/index.html
+++ b/index.html
@@ -23,66 +23,67 @@
       </button>
 
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="nav-follow">
-          <a href=""><i class="fab fa-linkedin"></i></a>
-          <a href=""><i class="fab fa-github"></i></a>
-          <a href=""><i class="fab fa-instagram"></i></a>
-        </div>
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <div class="toggle-holder">
-              <div id="toggle" class="">
-                <div></div>
-                <div></div>
-                <div></div>
-              </div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <div class="toggle-holder">
+            <div id="toggle" class="">
+              <div></div>
+              <div></div>
+              <div></div>
             </div>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a href="" class="active d-flex justify-content-between">
-                <span class="char1" aria-hidden="true">A</span>
-                <span class="char1" aria-hidden="true">B</span>
-                <span class="char1" aria-hidden="true">O</span>
-                <span class="char1" aria-hidden="true">U</span>
-                <span class="char1" aria-hidden="true">T</span>
-              </a>
-              <a href="" class="d-flex justify-content-between">
-                <span class="char1" aria-hidden="true">S</span>
-                <span class="char1" aria-hidden="true">K</span>
-                <span class="char1" aria-hidden="true">I</span>
-                <span class="char1" aria-hidden="true">L</span>
-                <span class="char1" aria-hidden="true">L</span>
-                <span class="char1" aria-hidden="true">S</span>
-              </a>
-              <a href="" class="d-flex justify-content-between">
-                <span class="char1" aria-hidden="true">R</span>
-                <span class="char1" aria-hidden="true">E</span>
-                <span class="char1" aria-hidden="true">S</span>
-                <span class="char1" aria-hidden="true">U</span>
-                <span class="char1" aria-hidden="true">M</span>
-                <span class="char1" aria-hidden="true">E</span>
-              </a>
-              <a href="" class="d-flex justify-content-between">
-                <span class="char1" aria-hidden="true">P</span>
-                <span class="char1" aria-hidden="true">R</span>
-                <span class="char1" aria-hidden="true">O</span>
-                <span class="char1" aria-hidden="true">J</span>
-                <span class="char1" aria-hidden="true">E</span>
-                <span class="char1" aria-hidden="true">C</span>
-                <span class="char1" aria-hidden="true">T</span>
-                <span class="char1" aria-hidden="true">S</span>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
+          </div>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a href="" class="active d-flex justify-content-between">
+              <span class="char1" aria-hidden="true">A</span>
+              <span class="char1" aria-hidden="true">B</span>
+              <span class="char1" aria-hidden="true">O</span>
+              <span class="char1" aria-hidden="true">U</span>
+              <span class="char1" aria-hidden="true">T</span>
+            </a>
+            <a href="" class="d-flex justify-content-between">
+              <span class="char1" aria-hidden="true">S</span>
+              <span class="char1" aria-hidden="true">K</span>
+              <span class="char1" aria-hidden="true">I</span>
+              <span class="char1" aria-hidden="true">L</span>
+              <span class="char1" aria-hidden="true">L</span>
+              <span class="char1" aria-hidden="true">S</span>
+            </a>
+            <a href="" class="d-flex justify-content-between">
+              <span class="char1" aria-hidden="true">R</span>
+              <span class="char1" aria-hidden="true">E</span>
+              <span class="char1" aria-hidden="true">S</span>
+              <span class="char1" aria-hidden="true">U</span>
+              <span class="char1" aria-hidden="true">M</span>
+              <span class="char1" aria-hidden="true">E</span>
+            </a>
+            <a href="" class="d-flex justify-content-between">
+              <span class="char1" aria-hidden="true">P</span>
+              <span class="char1" aria-hidden="true">R</span>
+              <span class="char1" aria-hidden="true">O</span>
+              <span class="char1" aria-hidden="true">J</span>
+              <span class="char1" aria-hidden="true">E</span>
+              <span class="char1" aria-hidden="true">C</span>
+              <span class="char1" aria-hidden="true">T</span>
+              <span class="char1" aria-hidden="true">S</span>
+            </a>
+          </div>
+        </li>
+      </ul>
     </div>
     <!-- navbar end here -->
 
     <div class="container">
       <div class="row">
         <!-- profile photo -->
-        <div class="nav-bg col 4" style="background-image: linear-gradient(rgba(246, 219, 188, 0.3),rgba(246, 219, 188, 0.3)), url('/src/media/Yizhu_Zong_2.jpg')">
+        <div class="col-4 d-flex flex-column profile" >
+          <div class="profile-photo" style="background-image: linear-gradient(rgba(246, 219, 188, 0.3),rgba(246, 219, 188, 0.3)), url('/src/media/Yizhu_Zong_2.jpg')">
+
+          </div>
+          <div class="profile-follow d-flex flex-row justify-content-around pt-4">
+            <a href="https://www.linkedin.com/in/yizhu-zong/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Agnes-Lain" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/agnes_lain/" target="_blank"><i class="fab fa-instagram"></i></a>
+          </div>
         </div>
         <!-- end profile photo -->
 
