--- a/index.html
+++ b/index.html
@@ -14,15 +14,10 @@
   </head>
   <body>
     <!-- navbar wagon style with dropdown -->
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex flex-row justify-content-between">
       <a class="navbar-brand" href="#">
         <i class="fas fa-terminal"></i> YIZHU ZONG
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
           <div class="toggle-holder">
@@ -76,7 +71,7 @@
       <div class="row">
         <!-- profile photo -->
         <div class="col-4 d-flex flex-column profile" >
-          <div class="profile-photo" style="background-image: linear-gradient(rgba(246, 219, 188, 0.3),rgba(246, 219, 188, 0.3)), url('/src/media/Yizhu_Zong_2.jpg')">
+          <div class="profile-photo" style="background-image: linear-gradient(rgba(246, 219, 188, 0.3),rgba(246, 219, 188, 0.3)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1600302866/cv%20element/Yizhu_Zong_2_z0haby.jpg')">
 
           </div>
           <div class="profile-follow d-flex flex-row justify-content-around pt-4">
